# anatomy-dr

./: .gitignore  README.md  goods.ipynb  package-lock.json  package.json
anatomate-ai/: README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
anatomate-ai/Model_Weights/: xgboost_heart_model_pipeline.joblib  xgboost_model_pipeline (1).joblib
anatomate-ai/api/: .gitignore  requirements.txt  server.py  test_model.py  test_model_features.py
anatomate-ai/app/: globals.css  layout.tsx  page.tsx
anatomate-ai/components/: action-buttons.tsx  animated-tagline.tsx  appointments-tab.tsx  explanation-output.tsx  explanation-panel.tsx  file-upload.tsx  floating-action-buttons.tsx  follow-up-question.tsx  health-data-visualization.tsx  health-survey.tsx  health-time-series.tsx  health-timeline.tsx  human-model.tsx  input-panel.tsx  medical-records-manager.tsx  medical-scan-upload.tsx  medical-scan-viewer.tsx  mobile-navigation.tsx  mode-toggle.tsx  page-header.tsx  patient-anatomy-viewer.tsx  profile-content.tsx  qr-scanner.tsx  records-list.tsx  report-symptom-button.tsx  risk-scan-content.tsx  severity-estimate.tsx  similar-cases.tsx  symptom-management.tsx  symptom-selector-button.tsx  symptoms-page-header.tsx  symptoms-visualization-panel.tsx  time-slot-selector.tsx  top-bar.tsx  user-greeting.tsx  (+3 more)
blockchain/: hardhat.config.ts  package-lock.json  package.json
python-backend/: Chronic_Disease_ML_Model.ipynb  Dataset.ipynb  Heart_disease.ipynb  main.py  pyproject.toml  requirements.txt
python-backend/app/: __init__.py  database.py
(+19 files in other folders)
