[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "joblib>=1.4.2",
    "numpy>=2.2.5",
    "pymongo[srv]>=4.12.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
]
